--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "drizzle-kit": "^0.20.7",
-    "tsx": "^4.7.0"
+    "tsx": "^4.7.0",
+    "yarn": "^1.22.21"
   }
 }
